refactor : 관심사, 회원 의관심사 저장 관련 로직 리팩토링 - 팩토리 패턴 적용